--- a/week_5/hw_5/hw5.html
+++ b/week_5/hw_5/hw5.html
@@ -287,9 +287,7 @@ for(x in 1:nrow(dtm)) {
 findZeroId = as.matrix(apply(doc.tfidf, 1, sum))
 tfidfnn = doc.tfidf[-which(findZeroId == 0),]
 
-tfidfnn
-
-write.csv(tfidfnn, &quot;show.csv&quot;)</code></pre>
+write.csv(doc.tfidf, &quot;show.csv&quot;)</code></pre>
 <pre><code>    這段就是根據不同文本，先將所有文本合成一個巨大的文本進行斷詞，可以得出約30000個不同的詞，也就是我們平常在說的term，並且根據tf-idf，也就是高頻率的詞在文本中可以認為是重要的，但是像是「的」、「都」這種高頻率出現在中文的字就會被過度放大，這就是tf的部分，而所謂idf就是指這些常常使用的字在各個文本出現的頻率，將這兩個東西相乘之後，就可以得到一個兩個不同概念所成的拮抗的數值，而tf-idf值越高代表在這個文本中這個字越重要，雖然這是一個根據簡單機率算出來的一個很模糊的值，但這的確在資料量夠大的時候，可以有更高的機率看出一個詞的重要性。</code></pre>
 <hr />
 </div>
